Add script file

--- a/finalproject.html
+++ b/finalproject.html
@@ -52,6 +52,15 @@
             </p>
         </div>
     </div>
+    
+    <!--Portofolio-->
+    <div>
+    </div>
+
+    <!--Blog-->
+    <div>
+    </div>
+
 
     <div class="team">
         <div class="team-title">
