--- a/index.html
+++ b/index.html
@@ -70,14 +70,15 @@
               An agriculture graduate who is passionate about digital marketing, especially <b>social media and search engine optimization (SEO)</b>. My interest in digital marketing started in my third year of college when I became a Head
               of Media of my organization. Then, I chose to take a part time job as a Social Media Specialist to dive into this field.
             </p>
-            <a href="#" class="more-about">More about me</a>
           </div>
           <div class="col-4 m-5">
             <p>
               Seeing many opportunities of SEO in the digital marketing field, I chose to learn in depth by enrolling in the SEO Specialization Bootcamp in Belajarlagi. I was trained for advanced SEO and built a personal project called
               <b>Sustainable Space</b>, an online media which is aimed for raising awareness of sustainable lifestyle.
             </p>
-            <a href="#" class="visit-ss">Click to visit Sustainable Space</a>
+          </div>
+          <div class="row justify-content-center">
+            <a href="#" class="visit-ss">Click to visit <b>Sustainable Space</b> ✦</a>
           </div>
         </div>
       </div>
@@ -85,34 +86,38 @@
 
     <!-- experience -->
     <section id="experience">
-      <div id="container">
-        <div class="row text-center">
-          <div class="col mt-5 mb-3">
-            <h2>My Experiences</h2>
+      <div class="container py-5">
+        <div class="row text-center mb-5 fw-lighter fs-5">
+          <div class="col">
+            <h2>My Learning Journey</h2>
+            <p>Lulus sebagai Sarjana Pertanian tidak membuatku berhenti belajar hal baru</p>
           </div>
-        </div>
-        <div class="row justify-content-center" style="height: 550px">
-          <div class="col-md-3">
-            <div class="card">
-              <img src="images/blog.jpg" class="card-img-top" alt="Blogger" />
-              <div class="card-body">
-                <p class="card-text">Blogger at Sustainable Space</p>
+          <div class="main-TL-4" style="color: white">
+            <div class="TL-4 left-4">
+              <div class="card" style="background-color: black; color: white">
+                <div class="card-body p-4">
+                  <h4>Hacktiv9</h4>
+                  <p class="fst-italic mb-2">November 2022</p>
+                  <p>Belajar Dasar Fundamental untuk Menjadi Web Programmer</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="images/sms.jpg" class="card-img-top" alt="Social Media Specialist" />
-              <div class="card-body">
-                <p class="card-text">Blogger at Sustainable Space</p>
+            <div class="TL-4 right-4">
+              <div class="card" style="background-color: black; color: white">
+                <div class="card-body p-4">
+                  <h4>Belajarlagi</h4>
+                  <p class="fst-italic mb-2">Agustus 2022</p>
+                  <p>SEO Specialization Bootcamp</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="images/seo.jpg" class="card-img-top" alt="Seo Specialist" />
-              <div class="card-body">
-                <p class="card-text">Blogger at Sustainable Space</p>
+            <div class="TL-4 left-4">
+              <div class="card" style="background-color: black; color: white">
+                <div class="card-body p-4">
+                  <h4>Google</h4>
+                  <p class="fst-italic mb-2">Februari 2022</p>
+                  <p>Foundations of Digital Marketing and E-commerce</p>
+                </div>
               </div>
             </div>
           </div>
@@ -123,53 +128,53 @@
     <!-- Education -->
     <section id="education">
       <div class="container py-5">
-        <div class="row text-center mb-5">
+        <div class="row text-center mb-5 fw-lighter fs-5">
           <div class="col">
             <h2>My Learning Journey</h2>
             <p>Lulus sebagai Sarjana Pertanian tidak membuatku berhenti belajar hal baru</p>
           </div>
           <div class="main-timeline-4" style="color: white">
             <div class="timeline-4 left-4">
-              <div class="card" style="background-color: #bfd1a0">
+              <div class="card" style="background-color: #f8ea8c; color: black">
                 <div class="card-body p-4">
                   <img src="images/hacktiv8-logo.png" class="card-img-top mb-2" alt="hacktiv8-logo" style="width: 100px" />
                   <i class="fas fa-brain fa-2x mb-3"></i>
                   <h4>Hacktiv9</h4>
-                  <p class="fst-italic mb-2">Belajar Dasar Fundamental untuk Menjadi Web Programmer</p>
-                  <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                  <p class="fst-italic mb-2">November 2022</p>
+                  <p>Belajar Dasar Fundamental untuk Menjadi Web Programmer</p>
                 </div>
               </div>
             </div>
             <div class="timeline-4 right-4">
-              <div class="card" style="background-color: #f3c5b9">
+              <div class="card" style="background-color: #4cd7d0; color: black">
                 <div class="card-body p-4">
                   <img src="images/bl-logo.png" class="card-img-top mb-2" alt="belajarlagi-logo" style="width: 100px" />
                   <i class="fas fa-camera fa-2x mb-3"></i>
                   <h4>Belajarlagi</h4>
-                  <p class="fst-italic mb-2">SEO Specialization Bootcamp</p>
-                  <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                  <p class="fst-italic mb-2">Agustus 2022</p>
+                  <p>SEO Specialization Bootcamp</p>
                 </div>
               </div>
             </div>
             <div class="timeline-4 left-4">
-              <div class="card" style="background-color: #bfd1a0">
+              <div class="card" style="background-color: #f8ea8c; color: black">
                 <div class="card-body p-4">
                   <img src="images/google-logo.png" class="card-img-top mb-2" alt="google-logo" style="width: 100px" />
                   <i class="fas fa-campground fa-2x mb-3"></i>
                   <h4>Google</h4>
-                  <p class="fst-italic mb-2">Fundamental of E-commerce and Digital Marketing</p>
-                  <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                  <p class="fst-italic mb-2">Februari 2022</p>
+                  <p>Foundations of Digital Marketing and E-commerce</p>
                 </div>
               </div>
             </div>
             <div class="timeline-4 right-4">
-              <div class="card" style="background-color: #f3c5b9">
+              <div class="card" style="background-color: #4cd7d0; color: black">
                 <div class="card-body p-4">
                   <img src="images/ugm-logo.png" class="card-img-top mb-2" alt="ugm-logo" style="width: 100px" />
                   <i class="fas fa-sun fa-2x mb-3"></i>
                   <h4>Universitas Gadjah Mada</h4>
-                  <p class="fst-italic mb-2">Agronomi</p>
-                  <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                  <p class="fst-italic mb-2">2017-2022</p>
+                  <p>Agronomi, Fakultas Pertanian</p>
                 </div>
               </div>
             </div>
@@ -184,6 +189,7 @@
         <div class="row text-center">
           <div class="col mt-5 mb-3">
             <h2>My SEO Skills</h2>
+            <p>Lulus sebagai Sarjana Pertanian tidak membuatku berhenti belajar hal baru</p>
           </div>
         </div>
         <div class="row justify-content-center" style="height: 550px">
@@ -241,16 +247,16 @@
       <div class="container">
         <div class="row">
           <div class="col-3">
-            <img src="images/1.png" alt="Nature" />
+            <img src="images/1.png" />
           </div>
           <div class="col-3">
-            <img src="images/2.png" alt="Snow" />
+            <img src="images/2.png" />
           </div>
           <div class="col-3">
-            <img src="images/3.png" alt="Mountains" />
+            <img src="images/3.png" />
           </div>
           <div class="col-3">
-            <img src="images/4.png" alt="Lights" />
+            <img src="images/4.png" />
           </div>
         </div>
       </div>
@@ -259,7 +265,7 @@
     <!-- Award -->
     <section id="award">
       <div class="container text-center">
-        <div class="row">
+        <div class="row" style="color: black">
           <div class="col">
             <h2>The Rarest Award in the World</h2>
           </div>
@@ -273,13 +279,14 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact" style="background-color: #f3c5b9">
+    <section id="contact">
       <div class="container">
         <div class="row m-5">
           <div class="col justify-content-center">
             <p class="cont-desc text-center fs-1">
               Don't be <br />
-              a stranger!
+              a stranger!<br />
+              😉
             </p>
           </div>
           <div class="col">
@@ -296,16 +303,19 @@
                 <label for="message" class="message">Message</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn-sbmt">Submit</button>
+              <input type="submit" class="btn-sbmt" value="Submit" />
             </form>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-      <p>Created by <span>febriannaina</span></p>
+    <!-- Footer-->
+    <footer id="footer">
+      <p class="with-love">
+        With love <br />
+        <b>febriannaina</b>
+      </p>
     </footer>
 
     <style>
