--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </nav>
 
     <!-- header/jumbotron -->
-    <section class="jumbotron text-center" style="height: 575px">
+    <section class="jumbotron text-center" style="height: 590px">
       <img src="images/profil.png" alt="febrianna" width="230" class="mt-5 mb-5" />
       <h1 class="display-4">Febrianna's Space</h1>
       <p class="lead">SEO Enthusiast ✦ Blogger ✦ Lifelong Learner</p>
@@ -58,7 +58,7 @@
 
     <!-- about -->
     <section id="about">
-      <div class="container" style="height: 550px">
+      <div class="container" style="height: 560px">
         <div class="row text-center">
           <div class="col">
             <h2>About Me</h2>
@@ -89,34 +89,34 @@
       <div class="container py-5">
         <div class="row text-center mb-5 fw-lighter fs-5">
           <div class="col">
-            <h2>My Learning Journey</h2>
-            <p>Lulus sebagai Sarjana Pertanian tidak membuatku berhenti belajar hal baru</p>
+            <h2>Experience</h2>
+            <p>I have worked with</p>
           </div>
           <div class="main-TL-4" style="color: white">
             <div class="TL-4 left-4">
               <div class="card" style="background-color: black; color: white">
                 <div class="card-body p-4">
-                  <h4>Hacktiv9</h4>
-                  <p class="fst-italic mb-2">November 2022</p>
-                  <p>Belajar Dasar Fundamental untuk Menjadi Web Programmer</p>
+                  <h4>SEO Outreach Intern</h4>
+                  <p class="fst-italic mb-2">Oktober 2022</p>
+                  <p>Niagahoster is abcegfkflflshdgorbnr</p>
                 </div>
               </div>
             </div>
             <div class="TL-4 right-4">
               <div class="card" style="background-color: black; color: white">
                 <div class="card-body p-4">
-                  <h4>Belajarlagi</h4>
+                  <h4>Social Media Specialist</h4>
                   <p class="fst-italic mb-2">Agustus 2022</p>
-                  <p>SEO Specialization Bootcamp</p>
+                  <p>Faculty of Agriculture wwhdbdjfbf</p>
                 </div>
               </div>
             </div>
             <div class="TL-4 left-4">
               <div class="card" style="background-color: black; color: white">
                 <div class="card-body p-4">
-                  <h4>Google</h4>
+                  <h4>Blogger</h4>
                   <p class="fst-italic mb-2">Februari 2022</p>
-                  <p>Foundations of Digital Marketing and E-commerce</p>
+                  <p>Sustainable Space</p>
                 </div>
               </div>
             </div>
@@ -131,7 +131,7 @@
         <div class="row text-center mb-5 fw-lighter fs-5">
           <div class="col">
             <h2>My Learning Journey</h2>
-            <p>Lulus sebagai Sarjana Pertanian tidak membuatku berhenti belajar hal baru</p>
+            <p>I was learning agriculture and biotechnology back then, but I also curious with digital marketing field</p>
           </div>
           <div class="main-timeline-4" style="color: white">
             <div class="timeline-4 left-4">
@@ -187,9 +187,9 @@
     <section id="skill">
       <div id="container" style="background-color: white">
         <div class="row text-center">
-          <div class="col mt-5 mb-3">
+          <div class="col mt-5 mb-3 fw-lighter fs-5">
             <h2>My SEO Skills</h2>
-            <p>Lulus sebagai Sarjana Pertanian tidak membuatku berhenti belajar hal baru</p>
+            <p>SEO tools which I am capable at</p>
           </div>
         </div>
         <div class="row justify-content-center" style="height: 550px">
@@ -242,21 +242,40 @@
       </div>
     </section>
 
+    <!-- Interest-->
     <section id="interest">
-      <!-- The grid: four columns -->
-      <div class="container">
-        <div class="row">
-          <div class="col-3">
-            <img src="images/1.png" />
+      <h2>My Interest</h2>
+      <div class="row mt-5">
+        <div class="col">
+          <div class="card" style="width: 100%">
+            <img src="images/1.png" class="card-img-top" />
+            <div class="card-body">
+              <p class="card-text">Books</p>
+            </div>
           </div>
-          <div class="col-3">
-            <img src="images/2.png" />
+        </div>
+        <div class="col">
+          <div class="card" style="width: 100%">
+            <img src="images/2.png" class="card-img-top" />
+            <div class="card-body">
+              <p class="card-text">Plant Diversity</p>
+            </div>
           </div>
-          <div class="col-3">
-            <img src="images/3.png" />
+        </div>
+        <div class="col">
+          <div class="card" style="width: 100%">
+            <img src="images/3.png" class="card-img-top" />
+            <div class="card-body">
+              <p class="card-text">Molecular Biology</p>
+            </div>
           </div>
-          <div class="col-3">
-            <img src="images/4.png" />
+        </div>
+        <div class="col">
+          <div class="card" style="width: 100%">
+            <img src="images/4.png" class="card-img-top" />
+            <div class="card-body">
+              <p class="card-text">Sustainability</p>
+            </div>
           </div>
         </div>
       </div>
@@ -265,15 +284,9 @@
     <!-- Award -->
     <section id="award">
       <div class="container text-center">
-        <div class="row" style="color: black">
-          <div class="col">
-            <h2>The Rarest Award in the World</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <p>Si paling bisa memahamimu.</p>
-          </div>
+        <div class="row text-center mt-5 mb-2 fw-lighter fs-5">
+          <h2>The Rarest Award in the World</h2>
+          <p>♡ Si paling bisa memahamimu ♡</p>
         </div>
       </div>
     </section>
@@ -285,8 +298,13 @@
           <div class="col justify-content-center">
             <p class="cont-desc text-center fs-1">
               Don't be <br />
-              a stranger!<br />
-              😉
+              a stranger<br />
+              <a href="">
+                <img src="images/linkedin.png" alt="LinkedIn" style="width: 40px; margin-right: 10px" />
+              </a>
+              <a href="">
+                <img src="images/instagram.png" alt="Instagram" style="width: 40px" />
+              </a>
             </p>
           </div>
           <div class="col">
